# cg

lab_01/: geometry.py  main.py  ui_helper.py
lab_02/: main.py
lab_02/controll/: controllModel.py  controllView.py
lab_02/data/: loc.txt
lab_02/model/: Circle.py  Line.py  Point.py  SetPoints.py  Tools.py  Vector.py
lab_02/shared/: SharedSettings.py
lab_02/view/: Btn.py  CanvasCircle.py  CanvasField.py  CanvasLine.py  CanvasPoint.py  CanvasPolygon.py  CanvasSegment.py  Settings.py  keyInput.py
lab_03/: CMakeLists.txt  app.cpp  app.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  math.cpp  math.h
lab_03/delivery/: line.cpp  line.h
lab_03/domain/: command.cpp  command.h  line.cpp  line.h  point.cpp  point.h  spectre.cpp  spectre.h
lab_04/: funcs.py  main.py  mainwindow.ui  mainwindow_ui.py  mainwindow_ui_back.py  my_mainwindow_ui.py  wait.ui  wait_ui.py
lab_07/: main.py  mainwindow.ui  mainwindow_ui.py
lab_08/: main.py  mainwindow.ui  mainwindow_ui.py
lab_09/: main.py  mainwindow.ui  mainwindow_ui.py
